Refactor and replace `toolChatMemory` with `webChatMemory`, removing redundant classes and configurations. Streamline chat memory logic, simplify service interactions, and update related package structures and imports.